--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@
 node_modules/
 
 # env
-.env
-.env.production
+.env*
 
 # logs
 logs/
@@ -27,3 +26,4 @@ lerna-debug.log*
 
 # misc
 .DS_Store
+.vercel
