--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "eslint": "^9.32.0",
-    "hono": "^4.8.10"
+    "googleapis": "^154.1.0",
+    "hono": "^4.8.10",
+    "redis": "^5.6.1"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "vercel": "^32.4.1"
   }
 }
