--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "dependencies": {
     "eslint": "^9.32.0",
-    "googleapis": "^154.1.0",
     "hono": "^4.8.10",
-    "redis": "^5.6.1"
+    "@upstash/redis": "^1.35.2"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
