--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "api/*": {
+      "excludeFiles": "{api/config,api/handlers,api/middleware,api/services,api/utils}/**"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
