--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.2",
+    "@upstash/redis": "^1.35.2",
     "eslint": "^9.32.0",
     "hono": "^4.8.10",
-    "@upstash/redis": "^1.35.2"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
     "vercel": "^32.4.1"
   }
 }
