--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:email": "tsx scripts/send-test-email.ts",
+    "beta:export": "node scripts/get-early-access.js"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
     "@upstash/redis": "^1.35.2",
     "eslint": "^9.32.0",
     "hono": "^4.8.10",
+    "resend": "^6.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vercel": "^46.0.2"
   }
