--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
-    "test:email": "tsx scripts/send-test-email.ts",
-    "beta:export": "node scripts/get-early-access.js"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
